objects/Apttus_Config2__PriceMatrix__c.object
<CustomObject>
    <description>Represents a price matrix associated with a price list entry</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_PriceList_Item_Ext_ID__c</fullName>
        <description>Store the External id information of the parent object</description>
        <label>APTS PriceList Item Ext ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Dim_Ext_ID__c</fullName>
        <description>Store the External id information of the parent object</description>
        <label>APTS Price Dim Ext ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Seg_Ext_ID__c</fullName>
        <description>Store the External id information of the parent object</description>
        <label>APTS Price Seg Ext ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the price matrix</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension1Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the first dimension</description>
        <label>Dimension 1</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipLabel>Price Matrices (Dimension 1)</relationshipLabel>
        <relationshipName>PriceMatrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension1ValueType__c</fullName>
        <description>The value type of the first dimension</description>
        <label>Dimension 1 Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discrete</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Cumulative Range</fullName>
                </value>
                <value>
                    <fullName>Weighted Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the second dimension</description>
        <label>Dimension 2</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipLabel>Price Matrices (Dimension 2)</relationshipLabel>
        <relationshipName>PriceMatrices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension2ValueType__c</fullName>
        <description>The value type of the second dimension</description>
        <label>Dimension 2 Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discrete</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Cumulative Range</fullName>
                </value>
                <value>
                    <fullName>Weighted Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension3Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the third dimension</description>
        <label>Dimension 3</label>
        <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
        <relationshipLabel>Price Matrices (Dimension 3)</relationshipLabel>
        <relationshipName>PriceMatrices3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension3ValueType__c</fullName>
        <description>The value type of the third dimension</description>
        <label>Dimension 3 Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discrete</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Cumulative Range</fullName>
                </value>
                <value>
                    <fullName>Weighted Range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableDateRange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether date range is enabled for the matrix</description>
        <inlineHelpText>Indicates whether date range is enabled for the matrix</inlineHelpText>
        <label>Enable Date Range</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableUsageIndexing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Index the usage quantity to enable cumulative usage rating</description>
        <inlineHelpText>Index the usage quantity to enable cumulative usage rating</inlineHelpText>
        <label>Enable Usage Indexing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InitialRows__c</fullName>
        <defaultValue>5</defaultValue>
        <description>The number of initial rows in the matrix</description>
        <label>Initial Rows</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsCumulativeRange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the range dimension values are cumulative. This field is deprecated. Use the Cumulative Range value type instead.</description>
        <label>Is Cumulative Range (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatrixType__c</fullName>
        <description>The matrix type</description>
        <label>Matrix Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dimension</fullName>
                </value>
                <value>
                    <fullName>Condition</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumberOfEntries__c</fullName>
        <description>Indicates the number of entries associated with the price matrix</description>
        <label>Number Of Entries</label>
        <summaryForeignKey>Apttus_Config2__PriceMatrixEntry__c.Apttus_Config2__PriceMatrixId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListItemId__c</fullName>
        <description>ID of the associated price list item</description>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Matrix Pricing</relationshipLabel>
        <relationshipName>PriceMatrices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The matrix evaluation sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StopProcessingMoreMatrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to prevent subsequent matrices from processing.</description>
        <label>Stop Processing More Matrices</label>
        <type>Checkbox</type>
    </fields>
    <label>Price Matrix</label>
    <nameField>
        <displayFormat>PM-{0000000000}</displayFormat>
        <label>Matrix Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Matrices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>